--- a/src/main/resources/profiles/local/application.properties
+++ b/src/main/resources/profiles/local/application.properties
@@ -34,8 +34,12 @@ storage.token.expire.time=31536000000
 
 ########################Kafka uploader######################
 kafka.server=127.0.0.1:9092
-social.telegram.topic.name=telegram-topic
-social.telegram.group.id=telegram-topic.broadcast
+
+########################Kafka Telegram Topics################
+telegram.incoming.messages.topic.name=telegram-income-messages
+telegram.outgoing.messages.topic.name=telegram-outcome-messages
+telegram.group.id=telegram-topic-broadcast
+
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
 redis.port=6379
