--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -33,9 +33,12 @@ storage.token.secret=sharafutdinova
 storage.token.expire.time=31536000000
 
 ########################Kafka uploader######################
-kafka.server=10.244.3.247:9093,10.244.2.160:9093,10.244.1.165:9093
-mail.group.id=mail-topic.broadcast
-mail.topic.name=mail-topic
+kafka.server=127.0.0.1:9092
+
+########################Kafka Telegram Topics################
+telegram.incoming.messages.topic.name=telegram-income-messages
+telegram.outgoing.messages.topic.name=telegram-outcome-messages
+telegram.group.id=telegram-topic-broadcast
 
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
