--- a/src/main/resources/profiles/local/application.properties
+++ b/src/main/resources/profiles/local/application.properties
@@ -42,6 +42,7 @@ kafka.server=127.0.0.1:9092
 telegram.incoming.messages.topic.name=telegram-income-messages
 telegram.outgoing.messages.topic.name=telegram-outcome-messages
 telegram.group.id=telegram-topic-broadcast
+telegram.message.callback.topic.name=telegram-callback-message
 
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
@@ -49,3 +50,6 @@ redis.port=6379
 redis.timeout=2000
 redis.database=0
 redis.usePool=true
+
+########################Video Uploader#######################
+video.file.upload.path=/Users/azatakhunov/temp/repository/video
