--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -39,6 +39,7 @@ kafka.server=10.244.3.247:9093,10.244.2.160:9093,10.244.1.165:9093
 telegram.incoming.messages.topic.name=telegram-income-messages
 telegram.outgoing.messages.topic.name=telegram-outcome-messages
 telegram.group.id=telegram-topic-broadcast
+telegram.message.callback.topic.name=telegram-callback-message
 
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
@@ -46,3 +47,6 @@ redis.port=6379
 redis.timeout=2000
 redis.database=0
 redis.usePool=true
+
+########################Video Uploader#######################
+video.file.upload.path=/home/repository/video
