--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -25,6 +25,7 @@ google.recaptcha.key.secret=ENC(Gl6Gyf80N0Mk8NtQWq+Y6FZGJau23ubBnyNtJIVXuV+LA2M8
 
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
+telegram.antiparkon.bot.token=1163881498:AAHIdmwx5LID-ntGdwi0HHX4du8l5Ojma7Y
 
 ########################Image uploader######################
 spring.servlet.multipart.max-file-size=1024000
