--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -18,6 +18,7 @@ app.email.password=ENC(vJ0rA/KyCmsxADPyREKrS9HnuER8FOOr)
 telegram.bot.token=1135703757:AAGkQVLih2s93F6mbHxMqja5QTpRZg42oGI
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
+telegram.portfolio.bot.token=1397197172:AAFGNNPzzHJEPkydAMTO2uchk0JKS9Pk3OA
 telegram.antiparkon.bot.token=1163881498:AAHIdmwx5LID-ntGdwi0HHX4du8l5Ojma7Y
 
 ########################Token Secret######################
