--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -16,6 +16,7 @@ app.email.login=ENC(qpnOykIgunOr/D9wOtg5eYoJW1385aulyq76y0QQIPY=)
 app.email.password=ENC(vJ0rA/KyCmsxADPyREKrS9HnuER8FOOr)
 
 telegram.bot.token=1135703757:AAGkQVLih2s93F6mbHxMqja5QTpRZg42oGI
+telegram.rune.bot.token=1274242773:AAGFIiXIH1kf9z3gABGS5d-ungfNfJH7qeQ
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
 telegram.portfolio.bot.token=1397197172:AAFGNNPzzHJEPkydAMTO2uchk0JKS9Pk3OA
