--- a/src/main/resources/profiles/local/application.properties
+++ b/src/main/resources/profiles/local/application.properties
@@ -17,6 +17,7 @@ app.email.password=ENC(vJ0rA/KyCmsxADPyREKrS9HnuER8FOOr)
 
 
 telegram.bot.token=527844587:AAGkYqISxP0gcNTAN3telufS5mr174C5E8Y
+telegram.rune.bot.token=1274242773:AAGFIiXIH1kf9z3gABGS5d-ungfNfJH7qeQ
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
 telegram.portfolio.bot.token=1397197172:AAFGNNPzzHJEPkydAMTO2uchk0JKS9Pk3OA
