[NF] search bot added

--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -18,6 +18,7 @@ app.email.password=ENC(vJ0rA/KyCmsxADPyREKrS9HnuER8FOOr)
 telegram.bot.token=1135703757:AAGkQVLih2s93F6mbHxMqja5QTpRZg42oGI
 telegram.rune.bot.token=1274242773:AAGFIiXIH1kf9z3gABGS5d-ungfNfJH7qeQ
 telegram.style.lady.bot.token=993908184:AAFGwS0x4-ru87dln-kPb-o8ZWG6RoR8f94
+telegram.search.bot.token=1366580974:AAHl9Hkhyblnw4xShfqeYKax29DC7DVukMc
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
 telegram.portfolio.bot.token=1397197172:AAFGNNPzzHJEPkydAMTO2uchk0JKS9Pk3OA
