--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -25,6 +25,7 @@ google.recaptcha.key.secret=ENC(Gl6Gyf80N0Mk8NtQWq+Y6FZGJau23ubBnyNtJIVXuV+LA2M8
 
 telegram.rune.bot.token=1274242773:AAGFIiXIH1kf9z3gABGS5d-ungfNfJH7qeQ
 telegram.style.lady.bot.token=993908184:AAFGwS0x4-ru87dln-kPb-o8ZWG6RoR8f94
+telegram.search.bot.token=1366580974:AAHl9Hkhyblnw4xShfqeYKax29DC7DVukMc
 telegram.chelny.kazan.bot.token=1324257122:AAENgy91EF_aaZQG6JNVXRqZ-6hYSNURJRQ
 telegram.getparts.bot.token=873040870:AAGtvcZhZNVVVJvFkGCAa0ObORDOmxYi4s8
 telegram.antiparkon.bot.token=1163881498:AAHIdmwx5LID-ntGdwi0HHX4du8l5Ojma7Y
