--- a/helm/botmasterzzz-social-proxy-service/values.yaml
+++ b/helm/botmasterzzz-social-proxy-service/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 4
 env: dev
 
 image:
-  repository: rusberbank.ru/botmasterzzz-social-proxy-service
+  repository: registry.yourapi.ru/botmasterzzz-social-proxy-service
   appVersion: 2
   pullPolicy: IfNotPresent
 
