[NF] bot core updated

--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -44,8 +44,8 @@ storage.token.expire.time=31536000000
 kafka.server=10.244.3.247:9093,10.244.2.160:9093,10.244.1.165:9093
 
 ########################Kafka Telegram Topics################
-telegram.incoming.messages.topic.name=telegram-income-messages
-telegram.outgoing.messages.topic.name=telegram-outcome-messages
+telegram.incoming.messages.topic.name=tg-income-message
+telegram.outgoing.messages.topic.name=tg-outcome-message
 telegram.group.id=telegram-topic-broadcast
 telegram.message.callback.topic.name=telegram-callback-message
 
