--- a/src/main/resources/profiles/local/application.properties
+++ b/src/main/resources/profiles/local/application.properties
@@ -45,8 +45,8 @@ storage.token.expire.time=31536000000
 kafka.server=127.0.0.1:9092
 
 ########################Kafka Telegram Topics################
-telegram.incoming.messages.topic.name=telegram-income-messages
-telegram.outgoing.messages.topic.name=telegram-outcome-messages
+telegram.incoming.messages.topic.name=tg-income-message
+telegram.outgoing.messages.topic.name=tg-outcome-message
 telegram.group.id=telegram-topic-broadcast
 telegram.message.callback.topic.name=telegram-callback-message
 
