--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -40,7 +40,8 @@ storage.token.secret=sharafutdinova
 storage.token.expire.time=31536000000
 
 ########################Kafka uploader######################
-kafka.server=10.244.3.190:9093,10.244.1.217:9093,10.244.2.207:9093
+#kafka.server=10.244.3.190:9093,10.244.1.217:9093,10.244.2.207:9093
+kafka.server=10.244.3.105:9093,10.244.2.48:9093,10.244.1.73:9093
 
 ########################Kafka Telegram Topics################
 telegram.incoming.messages.topic.name=tg-income-message
