--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -49,7 +49,7 @@ telegram.incoming.messages.topic.name=tg-income-message
 telegram.outgoing.messages.topic.name=tg-outcome-message
 telegram.group.id=telegram-topic-broadcast
 telegram.message.callback.topic.name=telegram-callback-message
-
+telegram.response.messages.topic.name=tg-response-message
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
 redis.port=6379
