users photo colletion added

--- a/src/main/resources/profiles/prod/application.properties
+++ b/src/main/resources/profiles/prod/application.properties
@@ -49,6 +49,7 @@ telegram.outgoing.messages.topic.name=tg-outcome-message
 telegram.group.id=telegram-topic-broadcast
 telegram.message.callback.topic.name=telegram-callback-message
 telegram.response.messages.topic.name=tg-response-message
+telegram.response.photo.topic.name=tg-response-photos-message
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
 redis.port=6379
