--- a/src/main/resources/profiles/dev/application.properties
+++ b/src/main/resources/profiles/dev/application.properties
@@ -43,15 +43,15 @@ storage.token.expire.time=31536000000
 ########################Kafka uploader######################
 #kafka.server=10.244.3.190:9093,10.244.1.217:9093,10.244.2.207:9093
 #kafka.server=10.244.3.105:9093,10.244.2.48:9093,10.244.1.73:9093
-kafka.server=10.0.0.6:32770
+kafka.server=10.0.0.6:32772
 
 ########################Kafka Telegram Topics################
-telegram.incoming.messages.topic.name=tg-income-message
-telegram.outgoing.messages.topic.name=tg-outcome-message
+telegram.incoming.messages.topic.name=tk-income-message
+telegram.outgoing.messages.topic.name=tk-outcome-message
 telegram.group.id=telegram-topic-broadcast
-telegram.message.callback.topic.name=telegram-callback-message
-telegram.response.messages.topic.name=tg-response-message
-telegram.response.photo.topic.name=tg-response-photos-message
+telegram.message.callback.topic.name=tk-callback-message
+telegram.response.messages.topic.name=tk-response-message
+telegram.response.photo.topic.name=tk-response-photos-message
 ########################Redis Connection Properties######################
 redis.hostName=10.0.0.1
 redis.port=6379
