--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <developers>
         <developer>
-            <email>a.akhunov@yourapi.ru</email>
+            <email>azat.akhunov@protonmail.com</email>
             <name>Azat Akhunov</name>
         </developer>
     </developers>
